# python-scripts-exercise

./: README.md
blockchain-data-science/: Q8.md  Q9.ipynb  README.md  bquxjob_23ea0bcb_19b27cdf561.json  data.json  pyproject.toml  q1.ipynb  q1.py  q2.ipynb  q2.py  q3.ipynb  q4.ipynb  q5.ipynb  q6.ipynb  q7.ipynb  q8.ipynb  q9_data.json  q9_data2.json  q9_data3.json  q9_data4.json
classtimeschedule/: .gitignore  README.md  data.csv  main.ipynb  pyproject.toml
dl-stream-video/: .gitignore  main.ipynb  main.py  parameters.json.sample  pyproject.toml
quant/: black_scholes.ipynb  pyproject.toml
stock/: .gitignore  AGENT.md  Makefile  README.md  format.ps1  format.sh  main.py  pyproject.toml  requirements.txt
stock/src/diagram/: kLine.py  line.py
stock/src/events/: event_star.py  events.py  lines.py
stock/src/stock/: __init__.py  backtest.py  cli.py  core.py  data.py  indicators.py  reports.py  runner.py  signals.py
stock/src/stock/diagram/: __init__.py  k_line.py  line.py
stock/src/stock/events/: __init__.py  event_star.py  events.py  lines.py
stock/src/stock/utils/: __init__.py  revenue.py  tables.py
stock/src/tables/: initDataFrame.py
stock/src/utils/: revenue.py  tables.py
stock/src/workspace/: __init__.py  strategies.py
stock/tests/: test_cli.py  test_data.py  test_diagram.py  test_env.py  test_event.py  test_framework.py  test_integration_twstock.py  test_tw_stock_api.py  test_utils.py  test_workspace_strategies.py
sun-middle/: Makefile  main.py  requirements.txt
sun-middle/services/: sky_observer.py
workflow/: README.md  pyproject.toml
(+13 files in other folders)
