[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "datetime>=5.5",
    "flake8>=7.2.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "mplfinance>=0.12.10b0",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "twstock>=1.4.0",
]
